<resources>
    <string name="app_name">HMS</string>
    <string name="welcome">Welcome to the \n Resort Companion Gateway</string>
    <string name="welcomeDesc">The tablet will be the access point to
        all facilities available in the hotel including meals,
        accommodation and other facilities. </string>
    <string name="welcomeMsg">Go ahead and login and enjoy your stay !</string>
    <string name="txtBxNic"> NIC ... </string>
    <string name="txtBxCode"> Code ... </string>
    <string name="loginBtn">Login</string>
    <string name="mainPageAccomTxt">Accommodation</string>
    <string name="mainPageFacTxt">Other Facilities</string>
    <string name="mainPageMealTxt">Meals and Bar</string>
    <string name="mainPageAccomImg">Accommodation</string>
    <string name="mainPageFacImg">Other Facilities</string>
    <string name="mainPageMealImg">Meals and Bar</string>
    <string name="mealsDateTimeTxt">Date | Time</string>
    <string name="mealsBreakfastTxt"> Breakfast Menu - 06.00 A.M to 10.00 A.M </string>
    <string name="mealsBreakfastBtn"> Breakfast </string>
    <string name="mealsLunchTxt"> Lunch Menu - 12.00 P.M to 03.00 P.M </string>
    <string name="mealsLunchBtn"> Lunch </string>
    <string name="mealsDinnerTxt"> Dinner Menu - 08.00 P.M to 11.00 P.M </string>
    <string name="mealsDinnerBtn"> Dinner </string>
    <string name="mealsBarTxt"> Bar and Bites - 05.00 P.M to 11.00 P.M </string>
    <string name="mealsBarBtn"> Bar </string>
    <string name="mealsSnackTxt"> Snacks and Tea </string>
    <string name="mealsSnackBtn"> Snacks </string>
    <string name="bfTitle"> Breakfast Menu - 06.00 A.M to 10.00 A.M </string>
    <string name="bfCb1"></string>
    <string name="bfCb1b"></string>
    <string name="bfCb2"></string>
    <string name="bfCb2b"></string>
    <string name="bfCb3"></string>
    <string name="bfCb3b"></string>
    <string name="bfBtn"> Order </string>
    <string name="lunchTitle"> Lunch Menu - 12.00 P.M to 03.00 P.M </string>
    <string name="lunchCb1"></string>
    <string name="lunchCb1b"></string>
    <string name="lunchCb2"></string>
    <string name="lunchCb2b"></string>
    <string name="lunchCb3"></string>
    <string name="lunchCb3b"></string>
    <string name="lunchBtn"> Order </string>
    <string name="dinnerTitle"> Dinner Menu - 08.00 P.M to 11.00 P.M </string>
    <string name="dinnerCb1"></string>
    <string name="dinnerCb1b"></string>
    <string name="dinnerCb2"></string>
    <string name="dinnerCb2b"></string>
    <string name="dinnerCb3"></string>
    <string name="dinnerCb3b"></string>
    <string name="dinnerBtn"> Order </string>
    <string name="barTitle"> Bar and Bites </string>
    <string name="barCb1"></string>
    <string name="barCb1b"></string>
    <string name="barCb2"></string>
    <string name="barCb2b"></string>
    <string name="barCb3"></string>
    <string name="barCb3b"></string>
    <string name="barBtn"> Order </string>
    <string name="snacksTitle"> Snacks and Tea </string>
    <string name="snacksCb1"></string>
    <string name="snacksCb1b"></string>
    <string name="snacksCb2"></string>
    <string name="snacksCb2b"></string>
    <string name="snacksCb3"></string>
    <string name="snacksCb3b"></string>
    <string name="snacksBtn"> Order </string>
    <string name="confDaTxt">The amount will be added to your final bill when checking out.
        No additional charges are involved </string>
    <string name="switch1"> Item 1 </string>
    <string name="switch2"> Item 2 </string>
    <string name="switch3"> Item 3 </string>
    <string name="switch4"> Item 4 </string>
    <string name="switch5"> Item 5 </string>
    <string name="switch6"> Item 6 </string>
    <string name="confTxtBx"> If you do not wish to update, please confirm </string>
    <string name="confTxtBx2"> Please note that each item costs 750 /- </string>
    <string name="confDashBtn1"> Update </string>
    <string name="confDashBtn2"> Confirm </string>
    <string name="confDashBtn3"> Clear </string>
    <string name="sucBtn"> Done </string>
    <string name="suc2"></string>
    <string name="sucMsg">
        Order confirmed \n\n
        Head to the dining area during the hours and enjoy your meals. \n\n
        Drinks will be available in the bar \n\n
        Snacks will be sent to the room \n\n
    </string>
    <string name="umTxt1"> Toggle the items to update </string>
    <string name="umTxt2"> If you do not wish to update, please confirm </string>
    <string name="uSwitch1"> Item 1 </string>
    <string name="uSwitch2"> Item 2 </string>
    <string name="uSwitch3"> Item 3 </string>
    <string name="uSwitch4"> Item 4 </string>
    <string name="uSwitch5"> Item 5 </string>
    <string name="uSwitch6"> Item 6 </string>
    <string name="umBtn"> Done </string>
    <string name="aiTxtBox"> Search Here ...  </string>
    <string name="aiItems">
        Item1 \n\n
    </string>
    <string name="aiCb1"> M_Price </string>
    <string name="aiCb1b"> L_Price </string>
    <string name="aiBtn"> Done </string>
    <string name="fmTxt1">Other Facilities </string>
    <string name="fmTxt2"> Indoor </string>
    <string name="fmTxt3"> Outdoor </string>
    <string name="fmImg1"> Indoor </string>
    <string name="fmImg2"> Outdoor </string>
    <string name="fmIndoorTxt1"> Indoor </string>
    <string name="fmIndoorTxt2"> Facility </string>
    <string name="fmIndoorTxt3"> View </string>
    <string name="fmIndoorTxt4">  Swimming Pool</string>
    <string name="fmIndoorTxt5"> Video Game Room </string>
    <string name="fmIndoorTxt6"> Game Room </string>
    <string name="fmIndoorTxt7"> Spa </string>
    <string name="fmIndoorTxt8"> Gym </string>
    <string name="fmButton1"> View </string>
    <string name="fmButton2"> View </string>
    <string name="fmButton3"> View </string>
    <string name="fmButton4"> View </string>
    <string name="fmButton5"> View </string>
    <string name="fmOutdoorTxt1"> Outdoor </string>
    <string name="fmOutdoorTxt2"> Facility </string>
    <string name="fmOutdoorTxt3"> View </string>
    <string name="fmOutdoorTxt4"> Cycling </string>
    <string name="fmOutdoorTxt5"> Golf </string>
    <string name="fmOutdoorTxt6"> Hiking </string>
    <string name="fmOutdoorTxt7"> Playground </string>
    <string name="fmButtonOu1"> View </string>
    <string name="fmButtonOu2"> View </string>
    <string name="fmButtonOu3"> View </string>
    <string name="fmButtonOu4"> View </string>
    <string name="swimmingPoolTxt1">Swimming Pool</string>
    <string name="swimmingPoolTxt2">Quantity</string>
    <string name="swimmingPoolTxt3">Size</string>
    <string name="swimmingPoolTxt4">Time</string>
    <string name="swimmingPoolTxt5">(Details)</string>
    <string name="swimmingPoolTxt6">(Details)</string>
    <string name="swimmingPoolTxt7">(Details)</string>
    <string name="swimmingPoolImg">Swimming Pool</string>
    <string name="spButton1"> Back </string>
    <string name="spButton2"> Cancel</string>
    <string name="spButton3"> Reserve</string>
    <string name="vgRoomTxt1">Video Game Room</string>
    <string name="vgRoomTxt2">Time</string>
    <string name="vgRoomTxt3">(Details)</string>
    <string name="vgRoomTxt4">(Details)</string>
    <string name="vgRoomTxt5">(Details)</string>
    <string name="vgRoomImg">videoGameRoom</string>
    <string name="vgrButton1"> Back </string>
    <string name="vgrButton2"> Cancel</string>
    <string name="vgrButton3"> Reserve</string>
    <string name="gameRoomTxt1">Game Room</string>
    <string name="gameRoomTxt2">Chess</string>
    <string name="gameRoomTxt3">Carrom</string>
    <string name="gameRoomTxt4">Pool</string>
    <string name="gameImg">gameRoom</string>
    <string name="grButton1"> Back </string>
    <string name="grButton2"> Cancel</string>
    <string name="grButton3"> Reserve</string>
    <string name="grButton4"> Reserve</string>
    <string name="grButton5"> Reserve</string>
    <string name="spaTxt1">Spa Room</string>
    <string name="spaTxt2">Time</string>
    <string name="spaTxt3">(Details)</string>
    <string name="spaTxt4">(Details)</string>
    <string name="spaTxt5">(Details)</string>
    <string name="spaTxt6">(Details)</string>
    <string name="spaImg">Spa</string>
    <string name="spaButton1"> Back </string>
    <string name="spaButton2"> Cancel</string>
    <string name="spaButton3"> Reserve</string>
    <string name="gymTxt1">Gym</string>
    <string name="gymTxt2">(Details)</string>
    <string name="gymTxt3">(Details)</string>
    <string name="gymTxt4">(Details)</string>
    <string name="gymTxt5">(Details)</string>
    <string name="gymTxt6">(Details)</string>
    <string name="gymTxt7">(Details)</string>
    <string name="gymButton"> Back </string>
    <string name="cycTxt1">Cycling</string>
    <string name="cycTxt2">(Details)</string>
    <string name="cycTxt3">(Details)</string>
    <string name="cycTxt4">(Details)</string>
    <string name="cycTxt5">(Details)</string>
    <string name="cycButton1"> Back </string>
    <string name="cycButton2"> Cancel</string>
    <string name="cycButton3"> Reserve</string>
    <string name="cycImg">cycImg</string>
    <string name="gTxt1">Golf</string>
    <string name="gTxt2">(Details)</string>
    <string name="gTxt3">(Details)</string>
    <string name="gTxt4">(Details)</string>
    <string name="gTxt5">(Details)</string>
    <string name="gButton1"> Back </string>
    <string name="gButton2"> Cancel</string>
    <string name="gButton3"> Reserve</string>
    <string name="gImg">gImg</string>
    <string name="hTxt1">Hiking</string>
    <string name="hTxt2">(Details)</string>
    <string name="hTxt3">(Details)</string>
    <string name="hTxt4">(Details)</string>
    <string name="hTxt5">(Details)</string>
    <string name="successTxt1">Reserved</string>
    <string name="successTxt2">Show QR code below at access point</string>
    <string name="scImg">scImg</string>
    <string name="amChoosetxt1"> Time/Date</string>
    <string name="ambutton2"> Back</string>
    <string name="amChoosetxt2"> Choose a room</string>
    <string name="amChoosetxt3"> Breakfast include-Deluxe Double or TwinRoom with Mountain View - Free cancellation</string>
    <string name="amChoosetxt4"> LKR 22,193.47 </string>
    <string name="ambutton3"> Select</string>
    <string name="amChoosetxt5"> Breakfast include -Super Deluxe Double Room with Mountain view</string>
    <string name="ambutton4"> Select</string>
    <string name="amChoosetxt6"> LKR 26,198.60</string>
    <string name="amChoosetxt7"> LKR 30,500.00</string>
    <string name="amChoosetxt8"> Breakfast include -Deluxe Single Room with awesome Mountain view</string>
    <string name="ambutton5"> Select</string>
    <string name="amChoosetxt9"> </string>
    <string name="amChoosetxt10"> </string>
    <string name="amChoosetxt11"> </string>
    <string name="amaddontxt1"> Time/Date</string>
    <string name="amaddontxt2">Add-ons</string>
    <string name="amaddontxt3"> Pillow LKR 100 </string>
    <string name="amaddontxt4"> Bed Sheet LKR 200</string>
    <string name="amaddontxt5"> Add-ons LKR 150</string>
    <string name="amaddontxt6">Add-ons LKR 200</string>
    <string name="amaddontxt7">Add-ons LKR 100</string>
    <string name="amaddonbut1">Add</string>
    <string name="amaddonbut2">Add</string>
    <string name="amaddonbut3">Add</string>
    <string name="amaddonbut4">Add</string>
    <string name="amaddonbut5">Add</string>
    <string name="amaddontxt9">Your Add-ons</string>
    <string name="amaddontxt10">Pillow LKR 100</string>
    <string name="amaddontxt11">Add-ons LKR 300</string>
    <string name="amaddontxt12">Bed Sheet LKR 200</string>
    <string name="amaddonbut7">Remove</string>
    <string name="amaddonbut8">Remove</string>
    <string name="amaddonbut9">Remove</string>
    <string name="amaddontxt13">Extra charge : LKR 400.00</string>
    <string name="amaddonbut10">Done</string>
</resources>